sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:5: error: not found: value getValueCount
  for (i <- 1 to getValueCount()-1) {
                 ^DutchFlagAlgo:6: error: not found: value getValue
    v=getValue(i)
      ^DutchFlagAlgo:8: error: not found: value getValue
    while ((j>0) && (getValue(j-1)>v) ) {
                     ^DutchFlagAlgo:9: error: not found: value setValue
      setValue(j, getValue(j-1))
      ^DutchFlagAlgo:9: error: not found: value getValue
      setValue(j, getValue(j-1))
                  ^DutchFlagAlgo:12: error: not found: value setValue
    setValue(j,v)
    ^DutchFlagAlgo:19: error: not found: value getValueCount
  for (i <- 1 to getValueCount()-1) {
                 ^DutchFlagAlgo:20: error: not found: value getValue
    v=getValue(i)
      ^DutchFlagAlgo:22: error: not found: value getValue
    while ((j>0) && (getValue(j-1)>v) ) {
                     ^DutchFlagAlgo:23: error: not found: value setValue
      setValue(j, getValue(j-1))
      ^DutchFlagAlgo:23: error: not found: value getValue
      setValue(j, getValue(j-1))
                  ^DutchFlagAlgo:26: error: not found: value setValue
    setValue(j,v)
    ^