sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var v:Int=0
  var j:Int=0
  for (i <- 1 to getValueCount()-1) {
    v=getValue(i)
    j=i
    while ((j>0) && (getValue(j-1)>v) ) {
      setValue(j, getValue(j-1))
      j=j-1
    }
    setValue(j,v)
  }
}

def insertionSort() {
  var v:Int=0
  var j:Int=0
  for (i <- 1 to getValueCount()-1) {
    v=getValue(i)
    j=i
    while ((j>0) && (getValue(j-1)>v) ) {
      setValue(j, getValue(j-1))
      j=j-1
    }
    setValue(j,v)
  }
}